--- a/_config.yml
+++ b/_config.yml
@@ -8,10 +8,10 @@ middle_name:
 last_name: Cheng
 email: ccheng2@caltech.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  I am Cloris Cheng, a CS undergrad @ Caltech. Welcome!
 footer_text: >
   Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
-keywords: jekyll, jekyll-theme, academic-website, portfolio-website # add your own keywords or leave empty
+keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: Caltech_logo.png # TODO: the emoji used as the favicon (alternatively, provide image name in /assets/img/) 
 
