--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: ccheng2@caltech.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   I am Cloris Cheng, a CS undergrad @ Caltech. Welcome!
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Last updated on <span id="last-updated"></span>.
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Last updated on 01/20/24.
 keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: Caltech_logo.png # TODO: the emoji used as the favicon (alternatively, provide image name in /assets/img/) 
@@ -65,7 +65,7 @@ og_image: # The site-wide (default for all links) Open Graph preview image
 # Social integration
 # -----------------------------------------------------------------------------
 
-github_username: ClorisCheng# your GitHub user name
+github_username: ClorisCheng # your GitHub user name
 gitlab_username: # your GitLab user name
 x_username: # your X handle
 mastodon_username: # your mastodon instance+username in the format instance.tld/@username
