--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ email: ccheng2@caltech.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   I am Cloris Cheng, a CS undergrad @ Caltech. Welcome!
 footer_text: >
-  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Last updated on 01/20/24.
+  Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>. Last updated on 07/15/24.
 keywords: # add your own keywords or leave empty
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
 icon: Caltech_logo.png # TODO: the emoji used as the favicon (alternatively, provide image name in /assets/img/) 
@@ -38,7 +38,7 @@ repo_trophies:
 # will use title and url fields
 # Take a look to https://github.com/jekyll/jekyll-feed for more customization
 
-rss_icon: true
+rss_icon: false
 
 # -----------------------------------------------------------------------------
 # Layout
